--- a/app/templates/products/detail.html
+++ b/app/templates/products/detail.html
@@ -85,7 +85,7 @@
             {% if current_user.is_authenticated and product.is_active is defined and product.is_sold is defined and product.is_active and not product.is_sold %}
             <!-- Action Buttons -->
             <div class="d-grid gap-2">
-                <a href="{{ url_for('cart.add', product_id=product.id) }}" class="btn btn-primary">
+                <a href="{{ url_for('cart.add_to_cart', product_id=product.id) }}" class="btn btn-primary">
                     <i class="bi bi-cart-plus me-2"></i> Add to Cart
                 </a>
                 
